# nvinx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  bench_24gb.yaml  bench_4gb.yaml  bench_8gb.yaml
docs/: calibrating-your-substrate.md
examples/: 01_serial_handoff.py  02_fractional_coresidency.py  03_ram_overflow.py  04_composed_day.py
examples/case_studies/: README.md  oncology_4gb_bench.py
src/nvinx/: __init__.py  catalog.py  config.py  interference.py  patterns.py  scheduler.py  substrate.py
src/nvinx/calibration/: __init__.py  fit.py  hardware.py  ncu.py  profile.py  result.py  runner.py  validate.py
tests/: test_calibration_fit.py  test_interference.py  test_patterns.py  test_substrate.py
