[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvinx"
version = "0.1.0"
description = "nginx-style workload scheduler for limited-VRAM GPU bench setups"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "aki1770-del" }]
keywords = [
    "gpu",
    "scheduling",
    "workload",
    "vram",
    "heterogeneous-compute",
    "research",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pyyaml >= 6.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
]

[project.urls]
Repository = "https://github.com/aki1770-del/nvinx"
Issues = "https://github.com/aki1770-del/nvinx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nvinx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
